--- a/config/database.yml
+++ b/config/database.yml
@@ -15,10 +15,12 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: mysql2
+  database: mainapp_test
   pool: 5
   timeout: 5000
+  username: root
+  password: root
 
 production:
   adapter: sqlite3
