--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: mysql2
-  database: mainapp_test
+  database: mainapp_db
   pool: 5
   timeout: 5000
   username: root
